tests/expectations/compiler/mappings/variable_shadow_mapping_fail.out
Error [EAST0372017]: The name `m` is defined multiple times.
    --> compiler-test:6:13
     |
   3 |       mapping m: u8 => u8;
     |       ^^^^^^^^^^^^^^^^^^^^ previous definition of `m` here
   ...
   6 |           let m: u8 = 1u8;
     |               ^ `m` redefined here
Error [ETYC0372117]: Expected type `u8` but type `(u8 => u8)` was found.
    --> compiler-test:7:16
     |
   7 |         return m;
     |                ^
